# oscam-nx111

./: .gitignore  .revision  CMakeLists.txt  Makefile  Maketype  ProjectHome.md  build.sh  config-funcs.h  config.mak  config.sh  global-functions.h  globals.h  module-anticasc.c  module-cccam.c  module-cccam.h  module-cccshare.c  module-dvbapi.c  module-dvbapi.h  module-gbox.c  module-newcamd.c  module-webif-lib.c  module-webif-pages.c  module-webif.c  oscam-conf.c  oscam-config-account.c  oscam-config-funcs.h  oscam-config-global.c  oscam-config-reader.c  oscam-config.c  oscam-config.h  oscam-ecm.c  oscam-http.c  oscam-http.h  oscam-reader.c  oscam-simples.c  oscam.c  reader-streamguard.c  reader-videoguard-common.c  reader-videoguard-common.h  reader-videoguard11.c  (+2 more)
.svn/: all-wcprops  dir-prop-base  entries  wc.db
Distribution/.svn/: all-wcprops  entries
Distribution/doc/.svn/: all-wcprops  entries
Distribution/doc/html/: oscam.conf.5.html  oscam.server.5.html
Distribution/doc/man/: oscam.conf.5  oscam.server.5
Distribution/doc/txt/: oscam.conf.txt  oscam.server.txt
Distribution/monitor/.svn/: all-wcprops  entries
OSCam.xcodeproj/.svn/: all-wcprops  entries
algo/.svn/: all-wcprops  entries
build_azbox/: install.sh
build_cygwin/: install.sh
build_cygwin/image/: oscam.conf
build_i686Linux/: install.sh
build_i686Linux/image/DEBIAN/: control  postinst
build_mipsel/: install.sh
build_mipsel/image/DEBIAN/: control
build_openwrt/: install.sh
build_openwrt/image/DEBIAN/: control
build_powerpc/: install.sh
cmake/.svn/: all-wcprops  entries
cscrypt/.svn/: all-wcprops  entries
csctapi/: CMakeLists.txt  ifd_pcsc.c  ifd_sc8in1.h  ifd_sci.c  ifd_smartreader_types.h  io_serial.c
csctapi/.svn/: all-wcprops  entries
cygwin/.svn/: entries
extapi/cygwin/: WinSCard.h
openxcas/.svn/: entries
toolchains/: toolchain-i386-cygwin.cmake  toolchain-i686-pc-linux.cmake  toolchain-mips-azbox.cmake  toolchain-mips-wrt54g.cmake
toolchains/.svn/: all-wcprops  entries
utils/: CMakeLists.txt
utils/.svn/: all-wcprops  entries
(+20 files in other folders)
