project (csctapi)

file (GLOB csctapi_srcs "*.c")
file (GLOB csctapi_hdrs "*.h")

if (NOT OSCamOperatingSystem MATCHES "Mac OS X")
   if (LIBRTDIR)
        check_include_file ("${LIBRTDIR}/include/sys/time.h" HAVE_LIBRT_STATIC)
        if (HAVE_LIBRT_STATIC)
            if (EXISTS ${LIBRTDIR}/lib/librt.a)
		message(STATUS "  static librt found : ${LIBRT_STATIC_LIBRARIES} (needed by libusb).")
                add_definitions ("-I${LIBRTDIR}/include/")
            else (EXISTS ${LIBRTDIR}/lib/librt.a)
		message(STATUS " static librt not found (needed by libusb). No smartreader support)")
                set (HAVE_LIBRT_STATIC False)
            endif (EXISTS ${LIBRTDIR}/lib/librt.a)
        elseif (HAVE_LIBRT_STATIC)
	    message(STATUS " static librt not found (needed by libusb). No smartreader support)")
            set (HAVE_LIBRT_STATIC False)
        endif (HAVE_LIBRT_STATIC)
    else (LIBRTDIR)
        check_include_file ("time.h" HAVE_LIBRT)
        if (HAVE_LIBRT)
	    message(STATUS "  librt found (needed by libusb).")
            set (HAVE_LIBRT True)
        else (HAVE_LIBRT)
	    message(STATUS "  no librt found (needed by libusb). No smartreader support")
            set (HAVE_LIBRT False)
        endif (HAVE_LIBRT)
    endif (LIBRTDIR)
else (NOT OSCamOperatingSystem MATCHES "Mac OS X")
    set (HAVE_LIBRT True)
endif (NOT OSCamOperatingSystem MATCHES "Mac OS X")

check_include_file ("${LIBUSBDIR}/include/libusb-1.0/libusb.h" HAVE_LIBUSB)
if (HAVE_LIBUSB AND HAVE_PTHREAD AND HAVE_LIBRT_STATIC)
    message(STATUS "  static libusb 1.0 found (${LIBUSB_STATIC_LIBRARIES}). Adding smartreader support ")
    add_definitions ("-DWITH_LIBUSB")
else (HAVE_LIBUSB AND HAVE_PTHREAD AND HAVE_LIBRT_STATIC)
    message(STATUS "  static libusb 1.0 not found. No smartreader support ")
endif (HAVE_LIBUSB AND HAVE_PTHREAD AND HAVE_LIBRT_STATIC)

set (lib_name "csctapi")
add_library (${lib_name} STATIC ${csctapi_srcs} ${csctapi_hdrs})

